# paol-original

./: #buffer.cpp#  #buffer.h#  #main.cpp#  .#buffer.h  .#main.cpp  .#producer.cpp  .#whiteBoardProcess.h  .gitignore  Makefile  Makefile.in  PaolThreads2  README.md  WebCamCapture.cpp  buffer.cpp  buffer.cpp~  buffer.h  buffer.h~  computerDistribute.cpp  computerDistribute.h  computerMain.cpp  computerMain.h  computerProcess.cpp  config.h  config.h.in  config.status  configure.in  consumer.cpp  consumer.h  genericProcess.cpp  gige.cpp  gige.h  locateProf.cpp  locateProf.h  locateSpeaker.cpp  locateSpeaker.h  main.cpp  main.cpp~  main_computer.cpp  main_whiteBoard.cpp  makefile  (+27 more)
2.0/: Makefile  Makefile.am  Makefile.am~  Makefile.in  WebCamCapture.h  ac.cpp  ac.h  buffer.cpp  buffer.cpp~  buffer.h  buffer.h~  computerDistribute.cpp  computerDistribute.h  computerProcess.cpp  computerProcess.h  config.h  configure  configure.ac  configure.in  epiphanCapture.cpp  epiphanCapture.h  genericProcess.cpp  genericProcess.h  gigE.cpp  gigE.h  lectVideoFrameCreate.cpp  lectVideoFrameCreate.h  locateSpeaker.cpp  main.cpp  makefile  makefile~  module.cpp  module.h  paol-threads  paolMat.cpp  paolMat.h  sample-capture.h  usbCam.cpp  usbCam.h  usbCamC.c  (+3 more)
2.0/GigESnap/: ARCH  PvAPI.lib  Snap  Snap.cpp  Snap.cpp~  Snap.dsp  Snap.sln  Snap.vcproj  makefile  makefile~
2.0/GigESnap/AVT GigE SDK/bin-pc/arm/: CLIpConfig
2.0/GigESnap/AVT GigE SDK/bin-pc/x64/: ResetCamera
2.0/GigESnap/AVT GigE SDK/examples/: ARCH
2.0/GigESnap/bin-pc/x64/: Snap
2.0/gphotoSrc/: a.out  config.c  context.c  libSampleCapture.so.1.0.1  makefile  makefile~  sample-capture.c  sample-capture.c~  sample-capture.h~  usb.cpp  usb.cpp~  usb.h  usb.h~  usbSnap
2.0/gphotoSrc/.deps/: autodetect.Po  config.Po  context.Po  lunkwill-canon-capture.Po  preview.Po  sample-autodetect.Po  sample-capture.Po  sample-multi-detect.Po  sample-owner.Po  sample-trigger-capture.Po
GigESnap/: ARCH  ImageLib.h  (+5 more)
(+49 files in other folders)
